src/test/deca/context/valid/objet/select_new.deca
// Description :
//    Test context avec une selection de new
//
// Resultats: arbre décoré

class A {

    int x;
    int y = 1;

    int getX() {
        int z = 1;
        return x;
    }

    void test() {}
}

{
    int x;
    x = (new A()).y;
    println(x);
}